# tsheets-cli

./: .gitignore  README.md  SEED.yaml  USAGE.md  pyproject.toml
.github/workflows/: ci.yml
src/tsheets_cli/: __init__.py  api.py  main.py  output.py  resolve.py
src/tsheets_cli/commands/: __init__.py  geo.py  jobcodes.py  projects.py  pto.py  reports.py  shortcuts.py  timesheets.py  users.py
tests/: test_auth.py  test_network_errors.py  test_resolve_user.py
