[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tsheets-cli"
version = "1.0.0"
description = "CLI tool for TSheets/QuickBooks Time REST API"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
tsheets = "tsheets_cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tsheets_cli"]

[tool.hatch.build.targets.sdist]
include = ["src/tsheets_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
